--- a/client/public/assets/locales/en/translation.json
+++ b/client/public/assets/locales/en/translation.json
@@ -1,15 +1,15 @@
 {
-  "Ngôn Ngữ": "Language",
-  "Trang chủ": "Home",
-  "Sản phẩm": "Product",
-  "Liên hệ": "Contact",
-  "Thông tin khách hàng": "Profile",
-  "Lịch sử đơn hàng": "History Order",
-  "Đăng nhập": "Login",
-  "Đăng xuất": "Logout",
-  "Chế độ tối": "Dark Mode",
-  "Việt Nam": "Vietnamese",
-  "Tiếng Anh": "English",
+  "Language": "Ngôn Ngữ",
+  "Home": "Trang chủ",
+  "Product": "Sản phẩm",
+  "Contact": "Liên hệ",
+  "Profile": "Thông tin khách hàn",
+  "History Order": "Lịch sử đơn hàng",
+  "Login": "Đăng nhập",
+  "Logout": "Đăng xuất",
+  "Dark Mode": "Chế độ tối",
+  "Vietnamese": "Việt Nam",
+  "English": "Tiếng Anh",
   "Xem chi tiết": "See details",
   "Miễn phí giao hàng": "Free ship",
   "Thanh toán COD": "COD payment",
