--- a/client/public/assets/locales/en/translation.json
+++ b/client/public/assets/locales/en/translation.json
@@ -1,15 +1,15 @@
 {
-  "Language": "Ngôn Ngữ",
-  "Home": "Trang chủ",
-  "Product": "Sản phẩm",
-  "Contact": "Liên hệ",
-  "Profile": "Thông tin khách hàn",
-  "History Order": "Lịch sử đơn hàng",
-  "Login": "Đăng nhập",
-  "Logout": "Đăng xuất",
-  "Dark Mode": "Chế độ tối",
-  "Vietnamese": "Việt Nam",
-  "English": "Tiếng Anh",
+  "Ngôn Ngữ": "Language",
+  "Trang chủ": "Home",
+  "Sản phẩm": "Product",
+  "Liên hệ": "Contact",
+  "Thông tin khách hàng": "Profile",
+  "Lịch sử đơn hàng": "History Order",
+  "Đăng nhập": "Login",
+  "Đăng xuất": "Logout",
+  "Chế độ tối": "Dark Mode",
+  "Việt Nam": "Vietnamese",
+  "Tiếng Anh": "English",
   "Xem chi tiết": "See details",
   "Miễn phí giao hàng": "Free ship",
   "Thanh toán COD": "COD payment",
@@ -24,6 +24,7 @@
   "Xóa": "Delete",
   "top sản phẩm bán chạy trong tuần": "Top Selling Products of the Week",
   "sản phẩm mới": "New product",
+  "phổ biến": "popular",
   "Hỗ trợ khách hàng": "Customer support",
   "phút": "minute",
   "kể cả": "even",
@@ -79,11 +80,11 @@
   "Danh mục":"Category",
   "Tạo":"Create",
   "Thông tin sản phẩm":"Product information",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
+  "Giảm giá":"Sale",
+  "Giá cũ":"Old Price",
+  "Giá":"Price",
+  "Mô tả": "Description",
+  "Chọn danh mục cho sản phẩm":"Select category",
   "":"",
   "":"",
   "":"",
