--- a/client/public/assets/locales/en/translation.json
+++ b/client/public/assets/locales/en/translation.json
@@ -85,6 +85,20 @@
   "Giá":"Price",
   "Mô tả": "Description",
   "Chọn danh mục cho sản phẩm":"Select category",
+  "Yêu cầu đăng nhập":"Login required",
+  "Thêm sản phẩm thành công":"Success",
+  "Sản phẩm đã có trong giỏ hàng":"Products already in the cart",
+  "Thêm sản phẩm yêu thích thành công":"Success",
+  "Sản phẩm đã có mục yêu thích":"Products already in the favorites",
+  "Yêu thích":"Favorites",
+  "Xóa sản phẩm khỏi mục yêu thích ?":" Remove product from favorites ?",
+  "Đã xóa sản phẩm khỏi mục yêu thích":"Product removed from favorites",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
   "":"",
   "":"",
   "":"",
